--- a/Pages/HRAindex.html
+++ b/Pages/HRAindex.html
@@ -41,10 +41,10 @@
                         <div style="display: flex; align-items: center; justify-content: space-between; margin: 20px 0; font-family: Arial, sans-serif;">
                             <span style="font-size: 16px;">Are you working in a metro city?</span>
                             <div style="display: flex; align-items: center; gap: 10px;">
-                                <input type="radio" id="yes" name="metro" value="yes" style="margin: 0;">
-                                    <label for="yes" style="margin: 0; font-size: 16px;">Yes</label>
-                                    <input type="radio" id="no" name="metro" value="no" style="margin: 0;">
-                                <label for="no" style="margin: 0; font-size: 16px;">No</label>
+                                <input type="radio" id="yes" name="metro" value="yes" style="margin-right: 20px;">
+                                    <label for="yes" style="margin: ; font-size: 16px;">Yes</label>
+                                    <input type="radio" id="no" name="metro" value="no" style="margin-right: 20px;">
+                                <label for="no" style="margin: 10px; font-size: 16px;">No</label>
                             </div>
                         </div>
                     </div>
