--- a/Pages/gratuityIndex.html
+++ b/Pages/gratuityIndex.html
@@ -24,15 +24,18 @@
             <section class="left-section">
                 <div class="calculator-section">
                     <form id="ppfForm">
-                        <div class="input-field">
-                            <label for="monthlySalary">Monthly Salary (Basic+DA) (₹):</label>
-                            <input type="number" id="monthlySalary" placeholder="Enter your monthly salary" min="10000" required>
-                        </div>
-                        <div class="input-field">
-                            <label for="yearsOfservice">Years of Service:</label>
-                            <input type="number" id="yearsOfservice" placeholder="Enter Years of Service" min="5" required>
-                        </div>
-                    </form>
+  <div class="input-field">
+    <label for="monthlySalary">Monthly Salary (Basic+DA) (₹):</label>
+    <input type="number" id="monthlySalary" placeholder="Enter your monthly salary" min="10000" required oninput="syncRange('monthlySalary', 'monthlySalaryRange')">
+    <input type="range" id="monthlySalaryRange" min="10000" max="1000000" step="1000" oninput="syncInput('monthlySalaryRange', 'monthlySalary')">
+  </div>
+  <div class="input-field">
+    <label for="yearsOfservice">Years of Service:</label>
+    <input type="number" id="yearsOfservice" placeholder="Enter Years of Service" min="5" required oninput="syncRange('yearsOfservice', 'yearsOfserviceRange')">
+    <input type="range" id="yearsOfserviceRange" min="5" max="100" step="1" oninput="syncInput('yearsOfserviceRange', 'yearsOfservice')">
+  </div>
+</form>
+
                     <div class="result-section">
                         <h2>Results</h2>
                         <div class="calculated-result">
