css comments removed changed RHS too

--- a/Pages/PPFindex.html
+++ b/Pages/PPFindex.html
@@ -152,7 +152,7 @@
 
     </main>
     <section class="faq-section">
-            <h1>Frequently Asked Questions</h1>
+            <h1 style="text-align: center;">Frequently Asked Questions</h1>
             <div class="faq-item">
                 <div class="faq-question">
                     <h3>What is a senior living home?</h3>
