--- a/Pages/cagrIndex.html
+++ b/Pages/cagrIndex.html
@@ -128,25 +128,19 @@
                     <img src="../assets/img/calculator image.jpg" alt="Image Banner for CTA">
                 </div>
                 <div class="cta-links">
-                    <a href="../index.html">Calculator Page</a> 
-                        <br>
-                    <a href="../Pages/emiIndex.html">EMI Calculator</a>
-                        <br>
+                    <a href="../index.html">Calculator Page</a>     
+                    <a href="../Pages/emiIndex.html">EMI Calculator</a>   
                     <a href="../Pages/gratuityIndex.html">Gratuity Calculator</a>
-                    <br>
                     <a href="../Pages/homeEMIindex.html">Home Loan EMI Calculator</a>
-                    <br>
                     <a href="../Pages/HRAindex.html">HRA Calculator</a>
-                    <br>
                     <a href="../Pages/PPFindex.html">PPF Calculator</a>
-                     <br>
                 </div>
             </aside>
 
         </div>
     </main>
     <section class="faq-section">
-            <h1>Frequently Asked Questions</h1>
+            <h1 style="text-align: center;">Frequently Asked Questions</h1>
             <div class="faq-item">
                 <div class="faq-question">
                     <h3>What is CAGR?</h3>
